--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 09:59:00 AM</p>
+    <p class="lastupdate">09/05/2020 10:04:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">80.1&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">80.0&#176;F</td>
+        <td class="data">80.8&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">54.8&#176;F</td>
+        <td class="data">54.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">42%</td>
+        <td class="data">41%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.964 inHg (0.016)</td>
+        <td class="data">29.960 inHg (0.015)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph N (0&#176;)</td>
+        <td class="data">2 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.1&#176;F</td>
+        <td class="data">78.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:00 AM">
-            80.0</span><br/>
+          <span title="10:03:46 AM">
+            80.8</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:00 AM" class="hival">
-            80.1</span>
+          <span title="10:03:46 AM" class="hival">
+            80.8</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -235,8 +235,8 @@
       <tr>
         <td class="label">Dew Point</td>
         <td class="data new_row hilo_day">
-          <span title="09:59:00 AM">
-            54.8</span><br/>
+          <span title="09:59:40 AM">
+            54.9</span><br/>
           <span title="06:23:41 AM">
             49.4</span>
         </td>
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="12:00:01 AM">
-            42</span>
+          <span title="09:59:48 AM">
+            41</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -440,11 +440,11 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          0
+          1
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          194
+          193
         </td>
         <td class="data new_row hilo_month">
           1<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 19 hours, 12 minutes</td>
+      <td class="data">3 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 19 hours, 12 minutes</td>
+      <td class="data">3 days, 19 hours, 17 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
