--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/05/2020 10:14:00 AM</p>
+    <p class="lastupdate">09/05/2020 10:19:00 AM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,15 +50,15 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">82.2&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">82.2&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">82.2&#176;F</td>
+        <td class="data">83.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
@@ -66,15 +66,15 @@
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">39%</td>
+        <td class="data">38%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.961 inHg (0.009)</td>
+        <td class="data">29.958 inHg (0.006)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">1 mph N (0&#176;)</td>
+        <td class="data">3 mph NW (315&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">78.3&#176;F</td>
+        <td class="data">78.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:32 AM">
-            82.2</span><br/>
+          <span title="10:18:18 AM">
+            83.0</span><br/>
           <span title="06:57:03 AM">
             61.3</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="10:13:32 AM" class="hival">
-            82.2</span>
+          <span title="10:18:18 AM" class="hival">
+            83.0</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:41:52 PM (Friday)" class="hival">
@@ -271,8 +271,8 @@
         <td class="data new_row hilo_day">
           <span title="06:20:27 AM">
             67</span><br/>
-          <span title="10:08:22 AM">
-            39</span>
+          <span title="10:16:54 AM">
+            38</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="06:37:07 AM (Thursday)">
@@ -440,15 +440,15 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          1
+          0
         </td>
         <td class="data new_row hilo_week">
           0<br/>
-          193
+          194
         </td>
         <td class="data new_row hilo_month">
           1<br/>
-          7
+          6
         </td>
         <td class="data new_row hilo_year">
           2<br/>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 19 hours, 27 minutes</td>
+      <td class="data">3 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 19 hours, 27 minutes</td>
+      <td class="data">3 days, 19 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
